[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Art/Brain Joos Logo.PNG" type="Texture" id=1]
[ext_resource path="res://UI Pages/ResetPasswordPage/ResetPassword.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Light.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Fonts/Space_Grotesk/static/SpaceGrotesk-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/UI/New folder/kenneyUI-blue.tres" type="Theme" id=5]
[ext_resource path="res://Assets/UI/DarkTheme/Dark.theme" type="Theme" id=6]
[ext_resource path="res://Assets/Buttons/ResetPWButton.png" type="Texture" id=7]
[ext_resource path="res://Assets/Buttons/ResetPWButtonPressed.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]
size = 85
outline_size = 2
outline_color = Color( 0.913725, 0.513726, 0.513726, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[node name="ResetPassword" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.7776, 0.88704, 0.96, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = 59.0
margin_right = 719.0
margin_bottom = 775.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameName" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.5
margin_top = 41.5
margin_right = 205.5
margin_bottom = 150.5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "BrainJoos"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
visible = false
modulate = Color( 1, 0.0117647, 0.0117647, 1 )
margin_left = 280.525
margin_top = 993.262
margin_right = 426.525
margin_bottom = 1038.26
text = "Message"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Backbutton" type="Button" parent="."]
margin_left = 37.7977
margin_top = 70.6069
margin_right = 111.122
margin_bottom = 116.607
theme = ExtResource( 5 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = 200.0
margin_right = 300.0
margin_bottom = 425.0
custom_constants/separation = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EmailInput" type="LineEdit" parent="VBoxContainer"]
margin_right = 600.0
margin_bottom = 97.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 2 )
align = 1
placeholder_text = "Email"
placeholder_alpha = 1.0
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="TextureButton" parent="VBoxContainer"]
margin_top = 127.0
margin_right = 600.0
margin_bottom = 225.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="Backbutton" to="." method="_on_Backbutton_pressed"]
[connection signal="pressed" from="VBoxContainer/ResetButton" to="." method="_on_ResetButton_pressed"]
